# umber

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release.yml
assets/: README.md  umber.desktop
crates/umber/: Cargo.toml
crates/umber-host/: Cargo.toml
crates/umber-host/src/: broker.rs  lib.rs  lua.rs  manifest.rs  wasm.rs
crates/umber-host/tests/: e2e.rs
crates/umber-host/tests/fixtures/: config.lua  hello.lua  hello.wat  loop.lua  loop.wat  sandbox.lua  valid.toml
crates/umber-kernel/: Cargo.toml
crates/umber-kernel/src/: lib.rs
crates/umber-proto/: Cargo.toml
crates/umber-proto/src/: lib.rs
crates/umber-syntax/: Cargo.toml
crates/umber-syntax/src/: lib.rs
crates/umber-text/: Cargo.toml
crates/umber-text/src/: lib.rs
crates/umber-ui/: Cargo.toml
crates/umber-ui/src/: lib.rs  popout.rs  renderer.rs
crates/umber-update/: Cargo.toml
crates/umber-update/src/: lib.rs
crates/umber/src/: agent_rpc.rs  agents.rs  git.rs  lib.rs  lsp.rs  main.rs  panes.rs  remote.rs  search.rs  terminal.rs
crates/umber/tests/: remote_e2e.rs  terminal_e2e.rs
crates/umber/wix/: main.wxs
crates/umberd/: Cargo.toml
crates/umberd/src/: main.rs
docs/: DECISIONS.md  PLAN.md  RESEARCH-pi.md  RESEARCH.md
docs/images/: README.md
scripts/: dev.sh  uitest.sh
