[package]
name = "umber"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "umber"
path = "src/main.rs"

[dependencies]
alacritty_terminal = { workspace = true }
serde_json = { workspace = true }
umber-ui.workspace = true
umber-text.workspace = true
umber-kernel.workspace = true
umber-host.workspace = true
umber-proto = { workspace = true }
winit.workspace = true

# Clipboard backend is platform-split. Linux re-enables arboard's
# `wayland-data-control` (wl-clipboard-rs) backend on top of the workspace base;
# Windows/macOS use arboard's always-on native backends (workspace base, default
# features off). Splitting here keeps the Linux build byte-for-byte identical.
[target.'cfg(target_os = "linux")'.dependencies]
arboard = { workspace = true, features = ["wayland-data-control"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
arboard = { workspace = true }
